--- a/resources/sass/_banners.scss
+++ b/resources/sass/_banners.scss
@@ -33,6 +33,7 @@
             text-align: center;
             font-size: 1.65rem;
             font-weight: 900;
+            margin-bottom: 20px;
         }
     }
 }
