--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11127,6 +11127,10 @@ table {
   width: fit-content;
 }
 
+.button_tag_white {
+  background-color: #fff;
+}
+
 .btnSubmit {
   text-align: center;
 }
@@ -11154,8 +11158,45 @@ table {
   transition: all 0.3s linear;
 }
 
+.btn_cadastre a {
+  background-color: #5837e7;
+  font-size: 0.875rem;
+  font-weight: 700;
+  border-radius: 30px;
+  font-size: 0.875rem;
+  color: #fff;
+  padding: 12px 25px;
+  transition: all 0.3s linear;
+}
+.btn_cadastre a:hover {
+  transition: all 0.3s linear;
+  background-color: #b06eff;
+}
+
 .bannerTop {
   padding: 60px 0 20px 0;
+}
+.bannerTop:before {
+  content: "";
+  display: block;
+  width: 13px;
+  height: 13px;
+  background-color: #20319D;
+  border-radius: 50%;
+  position: absolute;
+  margin-top: 7rem;
+  left: 0;
+}
+.bannerTop:after {
+  content: "";
+  display: block;
+  background-color: #E73795;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  border-radius: 50%;
+  margin-top: -16rem;
+  left: -10px;
 }
 .bannerTop .title {
   color: #030303;
@@ -11176,6 +11217,7 @@ table {
   display: none;
 }
 .bannerTop .search {
+  background-color: #fff;
   box-shadow: 0 3px 19px 10px rgba(0, 0, 0, 0.1);
   margin-top: 40px;
   padding: 20px 10px;
@@ -11194,6 +11236,17 @@ table {
   }
 }
 @media (min-width: 768px) {
+  .bannerTop:before {
+    width: 23px;
+    height: 23px;
+    left: 1.6666666667%;
+  }
+  .bannerTop:after {
+    width: 44px;
+    height: 44px;
+    margin-top: -15rem;
+    left: -20px;
+  }
   .bannerTop .title {
     font-size: 3.8rem;
   }
@@ -11208,12 +11261,16 @@ table {
   .bannerTop .imagem {
     display: block;
     position: absolute;
+    z-index: -1;
     width: 45%;
     right: 0;
     margin-top: -7rem;
   }
 }
 @media (min-width: 1200px) {
+  .bannerTop:before {
+    left: 4.1666666667%;
+  }
   .bannerTop .title {
     font-size: 4.5rem;
   }
@@ -11322,5 +11379,63 @@ form .collapse_filter .activeFilter {
 @media (min-width: 768px) {
   form label {
     font-size: 0.875rem;
+  }
+}
+.cadastre_se:before {
+  content: "";
+  display: block;
+  background: url("/images/bg_registre_van.png") no-repeat top center;
+  background-size: cover;
+  width: 100%;
+  height: 36vh;
+  margin-top: -12rem;
+  position: absolute;
+  z-index: -1;
+}
+.cadastre_se .takeCadastrese {
+  background-color: #F0EFF4;
+  padding: 30px 0;
+}
+.cadastre_se .takeCadastrese .row {
+  flex-wrap: wrap-reverse;
+}
+.cadastre_se .takeCadastrese .title {
+  padding-left: 10px;
+}
+.cadastre_se .takeCadastrese .title h3, .cadastre_se .takeCadastrese .title .h3 {
+  color: #030303;
+  font-size: 1.45rem;
+  font-weight: 900;
+  margin-top: 20px;
+}
+.cadastre_se .takeCadastrese .title h3 span, .cadastre_se .takeCadastrese .title .h3 span {
+  color: #b06eff;
+}
+.cadastre_se .takeCadastrese .text {
+  color: #858585;
+  font-weight: 550;
+  padding-left: 10px;
+  line-height: 1.5;
+  margin-top: 30px;
+}
+.cadastre_se .takeCadastrese .btn_cadastre {
+  margin-top: 30px;
+  padding-left: 10px;
+}
+.cadastre_se .takeCadastrese .button_tag_white {
+  margin-left: 10px;
+}
+
+@media (min-width: 768px) {
+  .cadastre_se .takeCadastrese {
+    padding: 50px 0;
+  }
+  .cadastre_se .takeCadastrese .title h3, .cadastre_se .takeCadastrese .title .h3 {
+    font-size: 2.2rem;
+  }
+}
+@media (min-width: 1200px) {
+  .cadastre_se .takeCadastrese .title h3, .cadastre_se .takeCadastrese .title .h3 {
+    font-size: 3.2rem;
   }
 }
