--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,7 +19,7 @@
 // Buttons
 @import 'buttons';
 
-// Banners
+// Banners 
 @import 'banners';
 
 // Formulário
@@ -27,6 +27,15 @@
 
 // Registre Van
 @import 'registre-van';
+
+// Depoiments
+@import 'depoiments';
+
+// FAQ
+@import 'faq';
+
+// Social Media 
+@import 'social-media';
 
 
  
