--- a/resources/sass/_registre-van.scss
+++ b/resources/sass/_registre-van.scss
@@ -12,6 +12,19 @@
         z-index: -1;
     }
 
+    &::after {
+        content: '';
+        position: absolute;
+        right: 0;
+        left: 0;        
+        z-index: 10;
+        display: block;
+        height: 50px;
+        background-size: 50px 100%;
+        background-image: linear-gradient(135deg, #f0eff4  25%, transparent 25%), linear-gradient(225deg, #f0eff4  25%, transparent 25%);
+        background-position: 0 0;
+    }
+
     .takeCadastrese {
         background-color: #F0EFF4;
         padding: 30px 0;
