--- a/resources/sass/_social-media.scss
+++ b/resources/sass/_social-media.scss
@@ -16,6 +16,25 @@
             }
         }
     }
+
+    .all_media {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 30px;
+        .itemSocial {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            .title {
+                h2 {
+                    color: $black;
+                    font-weight: 900;
+                    font-size: 1.65rem;
+                }
+            }
+        }
+    }
 }
 
 
