--- a/resources/sass/_buttons.scss
+++ b/resources/sass/_buttons.scss
@@ -86,3 +86,37 @@
         }
     }
 }
+
+.btn_register {
+    margin-bottom: 60px;
+    a {
+        background-color: $purple;
+        font-size: 0.875rem;
+        font-weight: 700;
+        border-radius: 30px;
+        font-size: 0.875rem;
+        color: #fff;
+        padding: 12px 25px;
+        @include anima-slow;
+
+        &:hover {
+            @include anima-slow;
+            background-color: $lightPurple;
+        }
+    }
+}
+
+.btn_edit {
+    a {
+        font-size: 0.875rem;
+        font-weight: 700;
+        font-size: 0.875rem;
+        color: $purple;
+        @include anima-slow;
+
+        &:hover {
+            @include anima-slow;
+            color: $lightPurple;
+        }
+    }
+}
